--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
     <header class="header active">
         <div class="container">
 
-            <div class="overlay"></div>
+            <div class="overlay" data-overlay></div>
 
             <a href="#">
                 <h1 class="logo">H.O.G Parish</h1>
             </a>
 
-            <nav class="navbar active">
+            <nav class="navbar" data-navbar>
                 <div class="navbar-top">
                     <a href="" class="logo">H.O.G Parish</a>
 
-                    <button class="nav-close-btn" aria-label="Close Menu">
-                        <ion-icon name="close-outline"></ion-icon>
+                    <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
+                        <ion-icon name="close-outline">aa</ion-icon>
                     </button>
                 </div>
 
@@ -67,7 +67,7 @@
                 <span>Our Events</span>
             </a>
 
-            <button class="nav-open-btn" aria-label="Open Menu">aa</button>
+            <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>aa</button>
             <ion-icon name="menu-outline"></ion-icon>
         </div>
     </header>
