done with the navigation section

--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
 
                 <ul class="navbar-list">
                     <li class="navbar-item">
-                        <a href="./index.html" class="navbar-link">Home</a>
+                        <a href="./index.html" class="navbar-link" data-navbar-link>Home</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="./events.html" class="navbar-link">Events</a>
+                        <a href="./events.html" class="navbar-link" data-navbar-link>Events</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="./campaign.html" class="navbar-link">Campaigns</a>
+                        <a href="./campaign.html" class="navbar-link" data-navbar-link>Campaigns</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="./blog.html" class="navbar-link">Blog</a>
+                        <a href="./blog.html" class="navbar-link" data-navbar-link>Blog</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="./about.html" class="navbar-link">About</a>
+                        <a href="./about.html" class="navbar-link" data-navbar-link>About</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="./contact.html" class="navbar-link">Contact</a>
+                        <a href="./contact.html" class="navbar-link" data-navbar-link>Contact</a>
                     </li>
                     
                 </ul>
@@ -71,10 +71,6 @@
             <ion-icon name="menu-outline"></ion-icon>
         </div>
     </header>
-
-
-
-
 
     <!-- The navigation section ends  -->
 
