--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- The navigation section starts  -->
 
-    <header class="header active">
+    <header class="header">
         <div class="container">
 
             <div class="overlay" data-overlay></div>
