--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <li class="navbar-item">
                         <a href="./contact.html" class="navbar-link" data-navbar-link>Contact</a>
                     </li>
-                    
+
                 </ul>
             </nav>
 
@@ -91,7 +91,52 @@
 
     <!-- The call To Prayer section starts  -->
 
+    <section class="about" id="about">
+        <div class="container">
 
+            <figure class="about-banner">
+                <img src="./img/9swaggystyles.jpg" width="700" height="532" loading="lazy" alt="about banner"
+                    class="w-100 banner-animation">
+            </figure>
+
+            <div class="about-content">
+
+                <h2 class="h2 section-title underline">Lifes We've Touched</h2>
+
+                <p class="about-text">
+                    Thank You For Shopping @Moneyworth Superstore A Place Where You Get Both Available And Affordable
+                    Products. Come Along With Your Friends Next Time
+                    Thank You For Shopping @Moneyworth Superstore A Place Where You Get Both Available And Affordable
+                    Products. Come Along With Your Friends Next Time
+                </p>
+                <p class="about-text">
+                    Thank You For Shopping @Moneyworth Superstore A Place Where You Get Both Available And Affordable
+                    Products. Come Along With Your Friends Next Time
+                </p>
+
+                <ul class="stats-list">
+
+                    <li class="starts-card">
+                        <p class="h3 stats-title">40</p>
+
+                        <p class="stats-text">Friends</p>
+                    </li>
+                    <li class="starts-card">
+                        <p class="h3 stats-title">40</p>
+
+                        <p class="stats-text">Social Media</p>
+                    </li>
+                    <li class="starts-card">
+                        <p class="h3 stats-title">120</p>
+
+                        <p class="stats-text">Evangelism</p>
+                    </li>
+
+                </ul>
+            </div>
+
+        </div>
+    </section>
 
 
 
