done with the hero section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,102 @@
 
 
 
-    <!-- The video section starts -->
+
+
+    <main>
+        <article>
+            <!-- The hero section starts -->
+
+            <section class="hero" id="home">
+                <div class="container">
+
+                    <div class="hero-content">
+
+                        <div class="hero-subtitle">A Church Of the Lord</div>
+
+                        <h2 class="h2 hero-title">Heaven is our ultimate goal in Mind</h2>
+
+                        <p class="hero-text">
+                            We are the Redeemed Christian Church Of God Hope Of Glory Parish and we bring you good news
+                            today. When everyone hears the word "good news" they think it's money but Apostle Paul told
+                            the lain man at the Temple Gate that "Silver or gold I have none but all I have for you is
+                            Christ, in the name above every other names arise and Walk" and it was so. Our Good news for
+                            you today is That "JESUS LOVE'S YOU"
+                        </p>
+
+                        <a href="./about.html" class="btn">Learn More</a>
+
+                    </div>
+
+                    <figure class="hero-banner">
+                        <img src="./img/12.jpg" width="694" height="529" loading="lazy" alt="hero banner"
+                            class="w-100 banner-animation">
+                    </figure>
+
+                </div>
+            </section>
+
+            <!-- The hero section ends -->
+
+
+            <!-- The Life's we've touched section starts  -->
+
+            <section class="about" id="about">
+                <div class="container">
+
+                    <figure class="about-banner">
+                        <img src="./img/9swaggystyles.jpg" width="700" height="532" loading="lazy" alt="about banner"
+                            class="w-100 banner-animation">
+                    </figure>
+
+                    <div class="about-content">
+
+                        <h2 class="h2 section-title underline">Lifes We've Touched</h2>
+
+                        <p class="about-text">
+                            When People ask the question that how often d we impact People's Lives as a Church, we do is
+                            is that we just show them our Statistics and then they are amazed by what
+                            A once little Parish has beenable to achieve within such a short time. When Jesus Christ he
+                            made
+                            mention of how
+                            important it was for you and I to spread the Gospel and our Christ the Reedeemed Christian
+                            Church of
+                            God isn't stopping until all lives are saved.
+                        </p>
+                        <p class="about-text">
+                            We have been able to impact a lot of People's lives and we can also impact your own life,
+                            the life
+                            of your Friends and your Families. Join our amazing Religious Classes Today all for Free!
+                        </p>
+
+                        <ul class="stats-list">
+
+                            <li class="starts-card">
+                                <p class="h3 stats-title">400</p>
+
+                                <p class="stats-text">Friends</p>
+                            </li>
+                            <li class="starts-card">
+                                <p class="h3 stats-title">700</p>
+
+                                <p class="stats-text">Social Media</p>
+                            </li>
+                            <li class="starts-card">
+                                <p class="h3 stats-title">620</p>
+
+                                <p class="stats-text">Evangelism</p>
+                            </li>
+
+                        </ul>
+                    </div>
+
+                </div>
+            </section>
+
+            <!-- The life's we've touched section ends  -->
+
+        </article>
+    </main>
 
 
 
@@ -85,66 +180,8 @@
 
 
 
-    <!-- The video section ends -->
 
 
-
-    <!-- The call To Prayer section starts  -->
-
-    <section class="about" id="about">
-        <div class="container">
-
-            <figure class="about-banner">
-                <img src="./img/9swaggystyles.jpg" width="700" height="532" loading="lazy" alt="about banner"
-                    class="w-100 banner-animation">
-            </figure>
-
-            <div class="about-content">
-
-                <h2 class="h2 section-title underline">Lifes We've Touched</h2>
-
-                <p class="about-text">
-                    Thank You For Shopping @Moneyworth Superstore A Place Where You Get Both Available And Affordable
-                    Products. Come Along With Your Friends Next Time
-                    Thank You For Shopping @Moneyworth Superstore A Place Where You Get Both Available And Affordable
-                    Products. Come Along With Your Friends Next Time
-                </p>
-                <p class="about-text">
-                    Thank You For Shopping @Moneyworth Superstore A Place Where You Get Both Available And Affordable
-                    Products. Come Along With Your Friends Next Time
-                </p>
-
-                <ul class="stats-list">
-
-                    <li class="starts-card">
-                        <p class="h3 stats-title">40</p>
-
-                        <p class="stats-text">Friends</p>
-                    </li>
-                    <li class="starts-card">
-                        <p class="h3 stats-title">40</p>
-
-                        <p class="stats-text">Social Media</p>
-                    </li>
-                    <li class="starts-card">
-                        <p class="h3 stats-title">120</p>
-
-                        <p class="stats-text">Evangelism</p>
-                    </li>
-
-                </ul>
-            </div>
-
-        </div>
-    </section>
-
-
-
-
-
-
-
-    <!-- The call To Prayer section ends  -->
 
 
 
