writing code for the call-to-prayer section

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
             <!-- The hero section ends -->
 
 
+
+
+
             <!-- The Life's we've touched section starts  -->
 
             <section class="about" id="about">
@@ -170,6 +173,75 @@
             </section>
 
             <!-- The life's we've touched section ends  -->
+
+
+
+            <!-- The call to Prayer section starts -->
+
+            <section class=" section call-prayer" id="call-prayer">
+                <div class="container">
+
+                    <h2 class="h2 section-title underline">Join us Today!</h2>
+
+                    <ul class="call-prayer-list">
+                        <li>
+                            <div class="call-prayer-card">
+
+                                <div class="call-prayer-card-icon">
+                                    <ion-icon name="telescope-outline"></ion-icon>
+                                </div>
+
+                                <h3 class="h3 title">Speak To a Pastor</h3>
+
+                                <p class="text">You can call any of our standby Pastor's today and be sure to get an instant response from any Pastor on stabdby.</p>
+                                <button class="call-prayer-card-btn" aria-label="Show More">
+                                    <ion-icon name="chevron-forward-outline"></ion-icon>
+
+                                </button>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="call-prayer-card">
+
+                                <div class="call-prayer-card-icon">
+                                    <ion-icon name="desktop-outline"></ion-icon>
+                                </div>
+
+                                <h3 class="h3 title">Repeat after Me</h3>
+
+                                <p class="text">Are you sure tht you are a Born again?, if you aren't just say after me "Lord Jesus I know that I'm a sinner Please Forgive me and cleanse my soul again".... Amen ....</p>
+                                <button class="call-prayer-card-btn" aria-label="Show More">
+                                    <ion-icon name="chevron-forward-outline"></ion-icon>
+
+                                </button>
+                            </div>
+                        </li>
+
+                        <li>
+                            <div class="call-prayer-card">
+
+                                <div class="call-prayer-card-icon">
+                                    <ion-icon name="globe-outline"></ion-icon>
+                                </div>
+
+                                <h3 class="h3 title">Join our Classes</h3>
+
+                                <p class="text">There are many Christian Classes that you can be a part of today. We have many of them and you can be a psrt of one of them today. Join us Today and be glad you did</p>
+                                <button class="call-prayer-card-btn" aria-label="Join Now">
+                                    <ion-icon name="chevron-forward-outline"></ion-icon>
+
+                                </button>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+            </section>
+
+
+
+            <!-- The call to Prayer section starts -->
 
         </article>
     </main>
