done with the call-to-prayer section

--- a/index.html
+++ b/index.html
@@ -188,16 +188,15 @@
                             <div class="call-prayer-card">
 
                                 <div class="call-prayer-card-icon">
-                                    <ion-icon name="telescope-outline"></ion-icon>
+                                    <ion-icon name="telescope-outline">a</ion-icon>
                                 </div>
 
                                 <h3 class="h3 title">Speak To a Pastor</h3>
 
                                 <p class="text">You can call any of our standby Pastor's today and be sure to get an instant response from any Pastor on stabdby.</p>
-                                <button class="call-prayer-card-btn" aria-label="Show More">
-                                    <ion-icon name="chevron-forward-outline"></ion-icon>
-
-                                </button>
+                                <a class="call-prayer-card-btn" aria-label="Join Now" href="./contact.html">
+                                    <ion-icon name="chevron-forward-outline">a</ion-icon>
+                                </a>
                             </div>
                         </li>
 
@@ -205,16 +204,15 @@
                             <div class="call-prayer-card">
 
                                 <div class="call-prayer-card-icon">
-                                    <ion-icon name="desktop-outline"></ion-icon>
+                                    <ion-icon name="desktop-outline">a</ion-icon>
                                 </div>
 
                                 <h3 class="h3 title">Repeat after Me</h3>
 
                                 <p class="text">Are you sure tht you are a Born again?, if you aren't just say after me "Lord Jesus I know that I'm a sinner Please Forgive me and cleanse my soul again".... Amen ....</p>
-                                <button class="call-prayer-card-btn" aria-label="Show More">
-                                    <ion-icon name="chevron-forward-outline"></ion-icon>
-
-                                </button>
+                                <a class="call-prayer-card-btn" aria-label="Join Now" href="./contact.html">
+                                    <ion-icon name="chevron-forward-outline">a</ion-icon>
+                                </a>
                             </div>
                         </li>
 
@@ -222,16 +220,15 @@
                             <div class="call-prayer-card">
 
                                 <div class="call-prayer-card-icon">
-                                    <ion-icon name="globe-outline"></ion-icon>
+                                    <ion-icon name="globe-outline">a</ion-icon>
                                 </div>
 
                                 <h3 class="h3 title">Join our Classes</h3>
 
-                                <p class="text">There are many Christian Classes that you can be a part of today. We have many of them and you can be a psrt of one of them today. Join us Today and be glad you did</p>
-                                <button class="call-prayer-card-btn" aria-label="Join Now">
-                                    <ion-icon name="chevron-forward-outline"></ion-icon>
-
-                                </button>
+                                <p class="text">There are many Christian Classes that you can be a part of today. We have many of them and you can be a psrt of one of them today. Join us Today and be glad you did.</p>
+                                <a class="call-prayer-card-btn" aria-label="Join Now" href="./contact.html">
+                                    <ion-icon name="chevron-forward-outline">a</ion-icon>
+                                </a>
                             </div>
                         </li>
                     </ul>
@@ -239,9 +236,7 @@
                 </div>
             </section>
 
-
-
-            <!-- The call to Prayer section starts -->
+            <!-- The call to Prayer section ends -->
 
         </article>
     </main>
