done with the christianity blog section

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <a href="./blog.html" class="navbar-link" data-navbar-link>Blog</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="./about.html" class="navbar-link" data-navbar-link>About</a>
+                        <a href="./about.html" class="navbar-link" data-navbar-link>About Us</a>
                     </li>
                     <li class="navbar-item">
                         <a href="./contact.html" class="navbar-link" data-navbar-link>Contact</a>
@@ -437,8 +437,8 @@
 
                                 <figure class="banner">
                                     <a href="###">
-                                        <img src="./img/3WhiteRockandRole.jpg" alt="" width="750" height="350" loading="lazy"
-                                            class="img-cover">
+                                        <img src="./img/3WhiteRockandRole.jpg" alt="" width="750" height="350"
+                                            loading="lazy" class="img-cover">
                                     </a>
                                 </figure>
 
@@ -514,13 +514,13 @@
                                         </div>
 
                                         <button class="comment" aria-label="Comment">
-                                            <ion-icon name="chatbubble-outline"></ion-icon>
+                                            <ion-icon name="chatbubble-outline">a</ion-icon>
 
                                             <data value="15">15</data>
                                         </button>
 
                                         <button class="share" aria-label="Share">
-                                            <ion-icon name="share-social-outline"></ion-icon>
+                                            <ion-icon name="share-social-outline">a</ion-icon>
                                         </button>
 
                                     </div>
@@ -535,8 +535,8 @@
 
                                 <figure class="banner">
                                     <a href="###">
-                                        <img src="./img/3WhiteRockandRole.jpg" alt="" width="750" height="350" loading="lazy"
-                                            class="img-cover">
+                                        <img src="./img/3WhiteRockandRole.jpg" alt="" width="750" height="350"
+                                            loading="lazy" class="img-cover">
                                     </a>
                                 </figure>
 
@@ -563,13 +563,13 @@
                                         </div>
 
                                         <button class="comment" aria-label="Comment">
-                                            <ion-icon name="chatbubble-outline"></ion-icon>
+                                            <ion-icon name="chatbubble-outline">a</ion-icon>
 
                                             <data value="15">15</data>
                                         </button>
 
                                         <button class="share" aria-label="Share">
-                                            <ion-icon name="share-social-outline"></ion-icon>
+                                            <ion-icon name="share-social-outline">a</ion-icon>
                                         </button>
 
                                     </div>
@@ -584,8 +584,8 @@
 
                                 <figure class="banner">
                                     <a href="###">
-                                        <img src="./img/9swaggystyles.jpg" alt="" width="750" height="350" loading="lazy"
-                                            class="img-cover">
+                                        <img src="./img/9swaggystyles.jpg" alt="" width="750" height="350"
+                                            loading="lazy" class="img-cover">
                                     </a>
                                 </figure>
 
@@ -612,13 +612,13 @@
                                         </div>
 
                                         <button class="comment" aria-label="Comment">
-                                            <ion-icon name="chatbubble-outline"></ion-icon>
+                                            <ion-icon name="chatbubble-outline">a</ion-icon>
 
                                             <data value="15">15</data>
                                         </button>
 
                                         <button class="share" aria-label="Share">
-                                            <ion-icon name="share-social-outline"></ion-icon>
+                                            <ion-icon name="share-social-outline">a</ion-icon>
                                         </button>
 
                                     </div>
@@ -650,26 +650,7 @@
 
 
 
-    <!-- The Join our Christian Classes section starts -->
 
-
-
-
-
-
-    <!-- The Join our Christian Classes section ends -->
-
-
-
-    <!-- The Church Goals section starts -->
-
-
-
-
-
-
-
-    <!-- The Church Goals section ends -->
 
 
 
@@ -719,18 +700,90 @@
 
 
 
-    <!-- The Chritianity blogs section starts -->
-
-
-
-
-    <!-- The Chritianity blogs section ends -->
-
-
 
 
     <!-- The footer section starts -->
 
+    <footer class="footer">
+
+        <div class="footer-top section">
+            <div class="container">
+
+                <div class="footer-brand">
+
+                    <a href="#" class="logo">H.O.G-Parish</a>
+
+                    <p class="text">
+                        We are the Redeemed Christian Church Of God Hope Of Glory Parish and all we just have to say is that
+                        don't let a day passby without making someone smile and happy. Always Remember "THAT JESUS LOVE'S YOU"
+                    </p>
+
+                    <ul class="social-list">
+
+                        <li>
+                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                                <ion-icon name="logo-facebook">f</ion-icon>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                                <ion-icon name="logo-twitter">t</ion-icon>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                                <ion-icon name="logo-instagram">I</ion-icon>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="https://www.instagram.com/emmanuel.9944/" class="social-link">
+                                <ion-icon name="logo-linkedin">f</ion-icon>
+                            </a>
+                        </li>
+
+                    </ul>
+
+                </div>
+
+                <ul class="footer-list">
+
+                    <li>
+                        <p class="footer-list-title">Our links</p>
+                    </li>
+
+                    <li>
+                        <a href="#" class="footer-link">Home</a>
+                    </li>
+
+                    <li>
+                        <a href="./events.html" class="footer-link">Events</a>
+                    </li>
+
+                    <li>
+                        <a href="./campaign.html" class="footer-link">Campaigns</a>
+                    </li>
+
+                    <li>
+                        <a href="#blog" class="footer-link">Blog</a>
+                    </li>
+
+                    <li>
+                        <a href="./about.html" class="footer-link">About Us</a>
+                    </li>
+
+                    <li>
+                        <a href="./contact.html" class="footer-link">Contact</a>
+                    </li>
+
+                </ul>
+
+            </div>
+        </div>
+
+    </footer>
 
 
 
