--- a/index.html
+++ b/index.html
@@ -780,7 +780,121 @@
 
                 </ul>
 
+                <ul class="footer-list">
+
+                    <li>
+                        <p class="footer-list-title">Church Programs</p>
+                    </li>
+
+                    <li>
+                        <a href="sms: +234-9012857304" class="footer-link">Believer's Class</a>
+                    </li>
+
+                    <li>
+                        <a href="sms: +234-9012857304" class="footer-link">House Fellowship</a>
+                    </li>
+
+                    <li>
+                        <a href="sms: +234-9012857304" class="footer-link">Campaigns</a>
+                    </li>
+
+                    <li>
+                        <a href="./volunteer.html" class="footer-link">Volunteer</a>
+                    </li>
+
+                    <li>
+                        <a href="./events.html" class="footer-link">Events</a>
+                    </li>
+
+                </ul>
+
+                <ul class="footer-list">
+
+                    <li>
+                        <p class="footer-list-title">Other links</p>
+                    </li>
+
+                    <li>
+                        <a href="#" class="footer-link">FAQ</a>
+                    </li>
+
+                    <li>
+                        <a href="./volunteer.html" class="footer-link">Portfolio</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="footer-link">Privacy Policy</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="footer-link">Terms & Conditions</a>
+                    </li>
+
+                    <li>
+                        <a href="./campaign.html" class="footer-link">Support</a>
+                    </li>
+
+                    
+
+                </ul>
+
+                <ul class="footer-list">
+
+                    <li>
+                        <p class="footer-list-title">Contact Us</p>
+                    </li>
+
+                    <li class="footer-item">
+
+                        <div class="footer-item-icon">
+                            <ion-icon name="call">C</ion-icon>
+                        </div>
+
+                        <div>
+                            <a href="tel:+234-9012857304" class="footer-item-link">+234-9012857304</a>
+                            <a href="tel:+234-8115993636" class="footer-item-link">+234-8115993636</a>
+
+                        </div>
+
+                    </li>
+
+                    <li class="footer-item">
+
+                        <div class="footer-item-icon">
+                            <ion-icon name="mail">M</ion-icon>
+                        </div>
+
+                        <div>
+                            <a href="mailto:emzzyoluwole@gmail.com" class="footer-item-link">emzzyoluwole@gmail.com</a>
+                            <a href="mailto:eoluwole217@gmail.com" class="footer-item-link">eoluwole217@gmail.com</a>
+
+                        </div>
+
+                    </li>
+
+                    <li class="footer-item">
+
+                        <div class="footer-item-icon">
+                            <ion-icon name="location">L</ion-icon>
+                        </div>
+
+                        <address class="footer-item-link">
+                            Oke-Aro, Ogun State, Federal Republic of Nigeria
+                        </address>
+
+                    </li>
+
+                </ul>
+
+                
+
             </div>
+        </div>
+
+        <div class="footer-bottom">
+            <p class="copyright">
+                &copy; 2022 <a href="" class="copyright-link">Emmanuel Mojiboye Oluwole</a> . All Rights Reserved                
+            </p>
         </div>
 
     </footer>
