added a scroll up button to website, remaining responsiveness

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
 </head>
 
-<body>
+<body id="top">
 
     <!-- The navigation section starts  -->
 
-    <header class="header">
+    <header class="header" data-header>
         <div class="container">
 
             <div class="overlay" data-overlay></div>
@@ -905,6 +905,17 @@
 
 
     <!-- The footer section ends -->
+
+
+
+    <!-- The scroll top button starts -->
+
+    <a href="#top" class="scroll-top active" aria-label="Go To Top" data-scroll-top>
+        <ion-icon name="arrow-up-outline">a</ion-icon>
+    </a>
+
+    
+    <!-- The scroll top button starts -->
 
 
 
