--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
 
                     <figure class="hero-banner">
-                        <img src="./img/12.jpg" width="694" height="529" loading="lazy" alt="hero banner"
+                        <img src="./img/hero-banner.png" width="694" height="529" loading="lazy" alt="hero banner"
                             class="w-100 banner-animation">
                     </figure>
 
