adding more changes to website

--- a/index.html
+++ b/index.html
@@ -225,11 +225,11 @@
 
                                 <h3 class="h3 title">Repeat after Me</h3>
 
-                                <p class="text">Are you sure tht you are a Born again?, if you aren't just say after me
+                                <p class="text">Are you sure that you are a Born again?, if you aren't just say after me
                                     "Lord Jesus I know that I'm a sinner Please Forgive me and cleanse my soul
                                     again".... Amen ....</p>
                                 <a class="call-prayer-card-btn" aria-label="Join Now" href="./about.html">
-                                    <ion-icon name="chevron-forward-outline">a</ion-icon>
+                                    <ion-icon name="chevron-forward-outline"></ion-icon>
                                 </a>
                             </div>
                         </li>
