--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
 
             <a href="#">
                 <h1 class="logo">H.O.G</h1>
-            </a>
+            </a> 
 
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
-                    <a href="" class="logo">H.O.G Parish</a>
+                    <a href="" class="logo">H.O.G <br> Parish</a>
 
                     <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
-                        <ion-icon name="close-outline">aa</ion-icon>
+                        <ion-icon name="close-outline"></ion-icon>
                     </button>
                 </div>
 
@@ -65,11 +65,12 @@
                         <a href="./blog.html" class="navbar-link" data-navbar-link>Blog</a>
                     </li>
                     <li class="navbar-item">
-                        <a href="./about.html" class="navbar-link" data-navbar-link>About Us</a>
+                        <a href="./about.html" class="navbar-link" data-navbar-link>About </a>
                     </li>
-                    <li class="navbar-item">
-                        <a href="./contact.html" class="navbar-link" data-navbar-link>Contact</a>
+                     <li class="navbar-item">
+                        <a href="./about.html" class="navbar-link" data-navbar-link>Contact </a>
                     </li>
+                   
 
                 </ul>
             </nav>
@@ -78,11 +79,12 @@
             <a href="./events.html" class="btn">
                 <ion-icon name="chevron-forward-outline" aria-hidden="true"></ion-icon>
 
-                <span>Our Events</span>
+                <span> Events</span>
             </a>
 
-            <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>aa</button>
-            <ion-icon name="menu-outline"></ion-icon>
+            <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
+                <ion-icon name="menu-outline">a</ion-icon>
+            </button>
         </div>
     </header>
 
@@ -238,7 +240,7 @@
                             <div class="call-prayer-card">
 
                                 <div class="call-prayer-card-icon">
-                                    <ion-icon name="globe-outline">a</ion-icon>
+                                    <ion-icon name="person-add-outline"></ion-icon>
                                 </div>
 
                                 <h3 class="h3 title">Join our Classes</h3>
@@ -369,7 +371,7 @@
 
                             <div class="icon">
 
-                                <ion-icon name="color-palette-outline"></ion-icon>
+                                <ion-icon name="people-outline"></ion-icon>
                             </div>
 
                             <div class="content">
@@ -394,7 +396,7 @@
                         <li class="goals-card">
 
                             <div class="icon">
-                                <ion-icon name="slash-outline">a</ion-icon>
+                                <ion-icon name="megaphone-outline">a</ion-icon>
                             </div>
 
                             <div class="content">
@@ -426,6 +428,9 @@
             </section>
 
             <!-- The Church goals section ends -->
+
+
+
 
             <!-- The make a difference section starts -->
 
@@ -462,7 +467,9 @@
 
                                 <h3 class="h3 title">Donate To Support</h3>
 
-                                <p class="text">We as a Church don't leave Helping and feeding the masses in the hands of the Government, we always make sure we try as much as possible to give back to the society</p>
+                                <p class="text">We as a Church don't leave Helping and feeding the masses in the hands
+                                    of the Government, we always make sure we try as much as possible to give back to
+                                    the society</p>
                                 <a class="call-prayer-card-btn" aria-label="Donate Now" href="./contact.html">
                                     <ion-icon name="chevron-forward-outline">a</ion-icon>
                                 </a>
@@ -478,7 +485,9 @@
 
                                 <h3 class="h3 title">Become a Partner</h3>
 
-                                <p class="text">Just like we have said in our website and on our other social media platforms, we the Church are in need of your support and you can become one of our Partners today!</p>
+                                <p class="text">Just like we have said in our website and on our other social media
+                                    platforms, we the Church are in need of your support and you can become one of our
+                                    Partners today!</p>
                                 <a class="call-prayer-card-btn" aria-label="Join Now" href="./contact.html">
                                     <ion-icon name="chevron-forward-outline">a</ion-icon>
                                 </a>
