done with the upcoming events and its responsiveness

--- a/index.html
+++ b/index.html
@@ -596,8 +596,8 @@
 
                     <h2 class="h2 section-title underline">Come To Our Events</h2>
 
-                    <div class="eventsCenter">
-                        <div class="event1">
+                    <ul class="eventsCenter">
+                        <li class="event1">
 
                             <div class="dateEvent">
                                 <h2>15th <br> Aug</h2>
@@ -615,9 +615,9 @@
                                 lot due to insurgency. Now we want to help them out in the little ways we can...</p>
                             <a href="./events.html" class="btn">View Details</a>
                             </div>
-                        </div>
+                        </li> 
 
-                        <div class="event2">
+                        <li class="event2">
                             
                             <div class="dateEvent2">
                                 <h2>23rd <br> Sep</h2>
@@ -634,8 +634,8 @@
                             <p>Poverty is everywhere in the world both in Nigeria and the external Countries. We want to eradicate idle hands from our Youths. Our vision is to equip 75% of Youths with skills of survival...</p>
                             <a href="./events.html" class="btn">View Details</a>
                             </div>
-                        </div>
-                    </div>
+                        </li>
+                    </ul>
 
                 </div>
             </section>
