--- a/index.html
+++ b/index.html
@@ -606,19 +606,20 @@
                             <div class="eventTalk">
                                 <h3 class="h3">Operation Feed the Borno masses</h3>
 
-                            <h5>
-                                <i class="fas fa-time"></i>8:00 am - 12:30 pm
-                                <i class="fas fa-map-marker"></i>Borno State, Nigeria
-                            </h5>
+                                <h5>
+                                    <i class="fas fa-time"></i>8:00 am - 12:30 pm
+                                    <i class="fas fa-map-marker"></i>Borno State, Nigeria
+                                </h5>
 
-                            <p>The Boko Haram was first heard of in Borno State and the People of Borno State suffer a
-                                lot due to insurgency. Now we want to help them out in the little ways we can...</p>
-                            <a href="./events.html" class="btn">View Details</a>
+                                <p>The Boko Haram was first heard of in Borno State and the People of Borno State suffer
+                                    a
+                                    lot due to insurgency. Now we want to help them out in the little ways we can...</p>
+                                <a href="./events.html" class="btn">View Details</a>
                             </div>
-                        </li> 
+                        </li>
 
                         <li class="event2">
-                            
+
                             <div class="dateEvent2">
                                 <h2>23rd <br> Sep</h2>
                             </div> <br>
@@ -626,13 +627,15 @@
                             <div class="eventTalk2">
                                 <h3 class="h3">Tackling Poverty with the Youths</h3>
 
-                            <h5>
-                                <i class="fas fa-time"></i>12:00 pm - 6:30 pm
-                                <i class="fas fa-map-marker"></i>Lagos State, Nigeria
-                            </h5>
+                                <h5>
+                                    <i class="fas fa-time"></i>12:00 pm - 6:30 pm
+                                    <i class="fas fa-map-marker"></i>Lagos State, Nigeria
+                                </h5>
 
-                            <p>Poverty is everywhere in the world both in Nigeria and the external Countries. We want to eradicate idle hands from our Youths. Our vision is to equip 75% of Youths with skills of survival...</p>
-                            <a href="./events.html" class="btn">View Details</a>
+                                <p>Poverty is everywhere in the world both in Nigeria and the external Countries. We
+                                    want to eradicate idle hands from our Youths. Our vision is to equip 75% of Youths
+                                    with skills of survival...</p>
+                                <a href="./events.html" class="btn">View Details</a>
                             </div>
                         </li>
                     </ul>
@@ -644,6 +647,45 @@
             <!-- The Upcoming events section ends  -->
 
 
+
+            <!-- The meet our charity Team section starts -->
+
+            <section class="section team">
+                <div class="container">
+
+                    <h2 class="h2 section-title underline">Our Optimistic volunteers</h2>
+
+                    <ul class="volunteerTeam">
+
+                        <li class="volunteer1">
+                            <div class="teamShare container">
+                                <h6>DIRECTOR</h6>
+                                <h2>Dean Ambrose</h2>
+                                <p>The Captain of our Charity ship definitely has to be Dean, he is everyone's favorite</p>
+                                <div class="teamSocial">
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                                </div>
+                            </div>
+                        </li>
+
+                        <li class="volunteer2">
+
+                        </li>
+
+                        <li class="volunteer3">
+
+                        </li>
+
+                    </ul>
+
+                </div>
+            </section>
+
+
+
+            <!-- The meet our charity Team section ends -->
 
 
 
@@ -860,7 +902,7 @@
             </section>
 
 
-            <!-- The Christianity blogs section starts -->
+            <!-- The Christianity blogs section ends -->
 
         </article>
     </main>
@@ -898,14 +940,6 @@
 
 
 
-
-    <!-- The meet our charity Team section starts -->
-
-
-
-
-
-    <!-- The meet our charity Team section ends -->
 
 
 
