writing code for the volunteers section

--- a/index.html
+++ b/index.html
@@ -658,7 +658,20 @@
                     <ul class="volunteerTeam">
 
                         <li class="volunteer1">
-                            <div class="teamShare container">
+                            <div class="teamShare container"> <br>
+                                <h6>DIRECTOR</h6>
+                                <h2>Dean Ambrose</h2>
+                                <p>The Captain of our Charity ship definitely has to be Dean, he is everyone's favorite</p>
+                                <div class="teamSocial">
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a> 
+                                </div>
+                            </div>
+                        </li> 
+
+                        <li class="volunteer2">
+                            <div class="teamShare container"> <br>
                                 <h6>DIRECTOR</h6>
                                 <h2>Dean Ambrose</h2>
                                 <p>The Captain of our Charity ship definitely has to be Dean, he is everyone's favorite</p>
@@ -670,18 +683,23 @@
                             </div>
                         </li>
 
-                        <li class="volunteer2">
-
-                        </li>
-
                         <li class="volunteer3">
-
+                            <div class="teamShare container"> <br>
+                                <h6>DIRECTOR</h6>
+                                <h2>Dean Ambrose</h2>
+                                <p>The Captain of our Charity ship definitely has to be Dean, he is everyone's favorite</p>
+                                <div class="teamSocial">
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
+                                    <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a> 
+                                </div> 
+                            </div>
                         </li>
 
                     </ul>
 
                 </div>
-            </section>
+            </section> <br> <br> <br>
 
 
 
