--- a/index.html
+++ b/index.html
@@ -672,9 +672,9 @@
 
                         <li class="volunteer2">
                             <div class="teamShare container"> <br>
-                                <h6>DIRECTOR</h6>
-                                <h2>Dean Ambrose</h2>
-                                <p>The Captain of our Charity ship definitely has to be Dean, he is everyone's favorite</p>
+                                <h6>VOLUNTEER</h6>
+                                <h2>David Joseph</h2>
+                                <p>David is an amazing Team member and started with the Church and the Charity Team from scratch</p>
                                 <div class="teamSocial">
                                     <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
                                     <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
@@ -685,9 +685,9 @@
 
                         <li class="volunteer3">
                             <div class="teamShare container"> <br>
-                                <h6>DIRECTOR</h6>
-                                <h2>Dean Ambrose</h2>
-                                <p>The Captain of our Charity ship definitely has to be Dean, he is everyone's favorite</p>
+                                <h6>VOLUNTEER</h6>
+                                <h2>Bunmi Sola</h2>
+                                <p>Bunmi is a very skillful Woman and with a ton of skills she possess we've been Excelling</p>
                                 <div class="teamSocial">
                                     <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
                                     <a href="https://www.instagram.com/emmanuel.9944/"><i class="fas fa-instagram">a</i></a>
@@ -699,7 +699,7 @@
                     </ul>
 
                 </div>
-            </section> <br> <br> <br>
+            </section> <br> <br> <br> <br> <br>
 
 
 
